--- a/save/save.html
+++ b/save/save.html
@@ -9765,8 +9765,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200911232754726" modified="20200911233258487" tags="" title="test tiddler">
-<pre>will it save? nowddff</pre>
+<div created="20200911232754726" modified="20200911233508429" tags="" title="test tiddler" type="text/html">
+<pre>will it save? nowddff sss</pre>
 </div>
 
 
