--- a/save/save.html
+++ b/save/save.html
@@ -9765,7 +9765,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200911232754726" modified="20200911233508429" tags="" title="test tiddler" type="text/html">
+<div created="20200911232754726" modified="20200911233608967" tags="" title="test tiddler" type="text/plain">
 <pre>will it save? nowddff sss</pre>
 </div>
 
