Saved by TiddlyWiki

--- a/save/save.html
+++ b/save/save.html
@@ -175,6 +175,8 @@ Error message and password prompt
 
 <li>test tiddler</li>
 
+<li>Tittle tee</li>
+
 </ul>
 </p>
 
@@ -9595,7 +9597,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200911232312586" list="[[test tiddler]] GettingStarted $:/ControlPanel" modified="20200911232312586" title="$:/StoryList">
+<div created="20200911232312586" list="[[Tittle tee]] [[test tiddler]] GettingStarted $:/ControlPanel" modified="20200911232312586" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9767,6 +9769,9 @@ Error message and password prompt
 </div>
 <div created="20200911232754726" modified="20200911233608967" tags="" title="test tiddler" type="text/plain">
 <pre>will it save? nowddff sss</pre>
+</div>
+<div created="20200911233805737" modified="20200911233817516" tags="" title="Tittle tee">
+<pre>ddddd</pre>
 </div>
 
 
