--- a/wiki/DigitalGarden.html
+++ b/wiki/DigitalGarden.html
@@ -9750,8 +9750,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200911234902294" modified="20200911234905180" tags="" title="Test">
-<pre></pre>
+<div created="20200911234902294" modified="20200911235011779" tags="" title="Test">
+<pre>syoo</pre>
 </div>
 
 
