Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/NewJournal/Text</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -157,11 +159,11 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/tab--2112689675</li>
-
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -173,9 +175,9 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>test tiddler</li>
+<li>Prunem</li>
 
-<li>Tittle tee</li>
+<li>test</li>
 
 </ul>
 </p>
@@ -191,6 +193,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200912202333535" modified="20200912202338677" title="$:/config/NewJournal/Text">
+<pre></pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9564,40 +9569,40 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200911232731613" modified="20200911234058682" title="$:/GitHub/Filename">
+<div created="20200912203400381" modified="20200912203542114" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200911232610759" modified="20200911234053990" title="$:/GitHub/Path">
-<pre>/wiki/</pre>
+<div created="20200912203328973" modified="20200912203632088" title="$:/GitHub/Path">
+<pre>/wiki</pre>
 </div>
-<div created="20200911232353287" modified="20200911233250343" title="$:/GitHub/Repo">
-<pre>RikaSukenik/AlwaysPrune</pre>
+<div created="20200912202416694" modified="20200912203627069" title="$:/GitHub/Repo">
+<pre>RikaSukenik/Commonplace-book-</pre>
 </div>
-<div created="20200911232332240" modified="20200911232334128" title="$:/GitHub/Username">
+<div created="20200912202350950" modified="20200912202352613" title="$:/GitHub/Username">
 <pre>RikaSukenik</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200911232306994" modified="20200911232309154" title="$:/SiteSubtitle">
+<div created="20200912202316996" modified="20200912202319257" title="$:/SiteSubtitle">
 <pre>Rika's digital garden</pre>
 </div>
-<div created="20200911232303913" modified="20200911232305273" title="$:/SiteTitle">
+<div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200911232316761" modified="20200911232316761" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
-</div>
-<div created="20200911232321571" modified="20200911232321571" title="$:/state/tab-1749438307">
+<div created="20200912202345548" modified="20200912202345548" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200911232327934" modified="20200911232327934" title="$:/state/tab-2065006209">
+<div created="20200912202348282" modified="20200912203500184" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div created="20200912203313359" modified="20200912203319922" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200911232312586" list="[[Tittle tee]] [[test tiddler]] GettingStarted $:/ControlPanel" modified="20200911232312586" title="$:/StoryList">
+<div created="20200912202322317" list="$:/ControlPanel Prunem" modified="20200912203320604" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9641,7 +9646,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;null&quot;
+            &quot;text&quot;: &quot;file://&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9767,11 +9772,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200911232754726" modified="20200911234107247" tags="" title="test tiddler" type="text/plain">
-<pre>will it save? nowddff sss ddd</pre>
+<div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
+<pre>jojjlkjk;lk;lj</pre>
 </div>
-<div created="20200911233805737" modified="20200911233817516" tags="" title="Tittle tee">
-<pre>ddddd</pre>
+<div created="20200912203146184" modified="20200912203255611" tags="" title="test">
+<pre>dd dssss ert</pre>
 </div>
 
 
