Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -175,6 +175,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Commonplace-book</li>
+
 <li>Prunem</li>
 
 <li>test</li>
@@ -9602,7 +9604,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912202322317" list="$:/ControlPanel Prunem" modified="20200912203320604" title="$:/StoryList">
+<div created="20200912202322317" list="Commonplace-book $:/ControlPanel Prunem" modified="20200912204023256" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9771,6 +9773,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
+<pre></pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
