--- a/wiki/index.html
+++ b/wiki/index.html
@@ -177,11 +177,11 @@ Error message and password prompt
 
 <li>Commonplace-book</li>
 
-<li>New Tiddler</li>
-
 <li>Prunem</li>
 
 <li>test</li>
+
+<li>Test Tiddler</li>
 
 </ul>
 </p>
@@ -9606,7 +9606,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="[[New Tiddler]] GettingStarted $:/.giffmex/EditorToolbar/linkpopups $:/user/images/popup-link $:/.giffmex/.Stylesheet4popups" modified="20200912210105961" title="$:/StoryList">
+<div created="20200912210051875" list="[[Test Tiddler]] GettingStarted" modified="20200912210105961" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9779,15 +9779,14 @@ Error message and password prompt
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
 </div>
-<div created="20200912210109404" modified="20200912210125648" tags="" title="New Tiddler">
-<pre>$:/.giffmex/EditorToolbar/linkpopups
-</pre>
-</div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
 </div>
 <div created="20200912203146184" modified="20200912203255611" tags="" title="test">
 <pre>dd dssss ert</pre>
+</div>
+<div created="20200912210109404" modified="20200912210353913" tags="" title="Test Tiddler">
+<pre>Hey just some test content here</pre>
 </div>
 
 
