Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>Test Tiddler</li>
 
+<li>Tiddler 2</li>
+
 </ul>
 </p>
 
@@ -9606,7 +9608,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="[[Test Tiddler]] GettingStarted" modified="20200912210105961" title="$:/StoryList">
+<div created="20200912210051875" list="[[Tiddler 2]] [[Test Tiddler]] GettingStarted" modified="20200912210105961" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9787,6 +9789,9 @@ Error message and password prompt
 </div>
 <div created="20200912210109404" modified="20200912210353913" tags="" title="Test Tiddler">
 <pre>Hey just some test content here</pre>
+</div>
+<div created="20200912210359561" modified="20200912210527181" tags="" title="Tiddler 2">
+<pre>`&lt;div class=&quot;tooltip&quot;&gt;&lt;a href=&quot;cnn.com&quot;&gt;CNN&lt;/a&gt;&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;`</pre>
 </div>
 
 
