Saved by TiddlyWiki

--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -9849,8 +9849,8 @@ display:block;
 <div created="20200912210109404" modified="20200912210353913" tags="" title="Test Tiddler">
 <pre>Hey just some test content here</pre>
 </div>
-<div created="20200912210359561" modified="20200912210907663" tags="" title="Tiddler 2" type="text/plain">
-<pre>`&lt;div class=&quot;tooltip&quot;&gt;&lt;a href=&quot;https://cnn.com&quot;&gt;CNN&lt;/a&gt;&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;New Tiddler&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;`</pre>
+<div created="20200912210359561" modified="20200912211146496" tags="" title="Tiddler 2" type="text/x-tiddlywiki">
+<pre></pre>
 </div>
 
 
