--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -145,6 +145,8 @@ Error message and password prompt
 
 <li>$:/.giffmex/EditorToolbar/linkpopups</li>
 
+<li>$:/.giffmex/EditorToolbar/unlinkedpopups</li>
+
 <li>$:/config/NewJournal/Text</li>
 
 <li>$:/core</li>
@@ -164,6 +166,8 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/sidebar</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -247,6 +251,14 @@ display:block;
     $message=&quot;tm-edit-text-operation&quot;
     $param=&quot;wrap-selection&quot;
     prefix=&quot;&quot;&quot;&lt;div class=&quot;tooltip&quot;&gt;&lt;a href=&quot;XXX&quot;&gt;YYY&lt;/a&gt;&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;&quot;&quot;&quot;
+    suffix=&quot;&quot;&quot;&quot;&quot;&quot;
+/&gt;</pre>
+</div>
+<div caption="unlinked popups" condition="[&lt;targetTiddler&gt;!has[type]] [&lt;targetTiddler&gt;type[text/vnd.tiddlywiki]]" created="20200422155249074" description="unlinked popups" icon="$:/user/images/popup-unlink" modified="20200518145839371" shortcuts="" tags="$:/tags/EditorToolbar" title="$:/.giffmex/EditorToolbar/unlinkedpopups">
+<pre>&lt;$action-sendmessage
+    $message=&quot;tm-edit-text-operation&quot;
+    $param=&quot;wrap-selection&quot;
+    prefix=&quot;&quot;&quot;&lt;div class=&quot;tooltip&quot;&gt;YYY&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;&quot;&quot;&quot;
     suffix=&quot;&quot;&quot;&quot;&quot;&quot;
 /&gt;</pre>
 </div>
@@ -9641,7 +9653,7 @@ display:block;
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/user/images/popup-link]]</pre>
+# [[$:/.giffmex/EditorToolbar/unlinkedpopups]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -9651,6 +9663,9 @@ display:block;
 </div>
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
+</div>
+<div created="20200912211206925" modified="20200912211206925" title="$:/state/sidebar">
+<pre>no</pre>
 </div>
 <div created="20200912202345548" modified="20200912202345548" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
@@ -9664,7 +9679,7 @@ display:block;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="$:/Import [[Tiddler 2]] [[Test Tiddler]] GettingStarted $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
+<div created="20200912210051875" list="$:/Import [[Test Tiddler]] GettingStarted $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9846,10 +9861,10 @@ display:block;
 <div created="20200912203146184" modified="20200912203255611" tags="" title="test">
 <pre>dd dssss ert</pre>
 </div>
-<div created="20200912210109404" modified="20200912210353913" tags="" title="Test Tiddler">
+<div created="20200912210109404" modified="20200912211309811" tags="" title="Test Tiddler">
 <pre>Hey just some test content here</pre>
 </div>
-<div created="20200912210359561" modified="20200912211146496" tags="" title="Tiddler 2" type="text/x-tiddlywiki">
+<div created="20200912210359561" modified="20200912211152312" tags="" title="Tiddler 2" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
 
