--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -187,7 +187,11 @@ Error message and password prompt
 
 <li>$:/user/images/popup-link</li>
 
+<li>$:/user/images/popup-unlink</li>
+
 <li>Commonplace-book</li>
+
+<li>Popup</li>
 
 <li>Prunem</li>
 
@@ -9653,7 +9657,7 @@ display:block;
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/.giffmex/EditorToolbar/unlinkedpopups]]</pre>
+# [[$:/user/images/popup-unlink]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -9664,7 +9668,7 @@ display:block;
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200912211206925" modified="20200912211206925" title="$:/state/sidebar">
+<div created="20200912211206925" modified="20200912211421277" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
 <div created="20200912202345548" modified="20200912202345548" title="$:/state/tab-1749438307">
@@ -9679,7 +9683,7 @@ display:block;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="$:/Import [[Test Tiddler]] GettingStarted $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
+<div created="20200912210051875" list="Popup $:/Import $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9852,8 +9856,14 @@ display:block;
 <div created="20200514035239004" modified="20200514035640992" tags="$:/tags/Image" title="$:/user/images/popup-link">
 <pre>&lt;svg width=&quot;22pt&quot; height=&quot;22pt&quot; class=&quot;tc-popup-link-button tc-image-button&quot; viewBox=&quot;0 0 400 400&quot;&gt;&lt;path d=&quot;M297.333 3.001c-16.479 3.33-16.404 3.27-65.879 52.589-49.98 49.821-50.491 50.422-54.893 64.439-2.298 7.317-2.297 23.961.002 31.281 2.392 7.617 7.985 18.023 9.687 18.023 2.092 0 30.417-29.658 30.417-31.849 0-4.403 2.097-6.716 43.765-48.273 45.73-45.607 43.561-43.766 49.466-41.98 4.693 1.419 42.824 40.475 43.256 44.305.646 5.728 1.632 4.593-42.027 48.342-42.956 43.045-43.406 43.455-47.599 43.455-2.424 0-3.235.698-17.867 15.357l-15.328 15.357 1.655 1.263c17.552 13.392 43.933 14.067 63.174 1.617 4.439-2.872 87.17-84.958 91.977-91.26 14.879-19.505 14.791-47.465-.211-67-3.958-5.154-43.913-44.686-47.812-47.305C327.468 3.535 310.998.24 297.333 3.001m-44 115.072c-5.551 2.142-130.874 127.201-134.196 133.913-8.924 18.035 9.248 36.995 28.53 29.764 5.211-1.954 130.679-127.304 133.862-133.736 8.831-17.844-9.393-37.196-28.196-29.941m-126.557 56.674c-8.587 1.428-17.698 5.458-24.776 10.96-5.33 4.142-87.421 86.711-89.941 90.464-13.452 20.035-12.774 46.341 1.68 65.162 3.958 5.154 43.913 44.686 47.811 47.305 19.686 13.227 46.316 12.268 65.117-2.345 5.206-4.046 87.397-86.673 89.817-90.293 12.656-18.933 12.798-43.988.357-62.788-.927-1.4-2.022-2.545-2.435-2.545-2.094 0-32.406 31.672-32.406 33.86 0 4.39-2.112 6.72-43.432 47.919-45.431 45.298-43.952 44.04-49.649 42.223-2.765-.882-40.666-37.748-42.634-41.469-1.222-2.312-1.22-6.76.003-9.066.525-.991 19.65-20.453 42.5-43.25 43.277-43.178 44.199-43.996 47.974-42.551.553.212 7.258-6.019 17.238-16.017l16.333-16.363-1.654-1.263c-10.995-8.39-27.578-12.324-41.903-9.943&quot; fill-rule=&quot;evenodd&quot;/&gt;&lt;/svg&gt;</pre>
 </div>
+<div created="20200514035734957" modified="20200514035818268" tags="$:/tags/Image" title="$:/user/images/popup-unlink">
+<pre>&lt;svg width=&quot;22pt&quot; height=&quot;22pt&quot; class=&quot;tc-popup-unlink-button tc-image-button&quot; viewBox=&quot;0 0 400 400&quot;&gt;&lt;path d=&quot;M303.667 2.432c-9.406.907-18.161 4.022-26 9.25-8.808 5.875-91.074 88.756-95.244 95.955-10.514 18.155-10.126 40.617.995 57.596l2.773 4.232 15.238-15.227c14.539-14.529 15.238-15.344 15.238-17.766 0-1.396.43-3.348.957-4.338 1.156-2.177 82.763-83.685 84.832-84.731 2.048-1.036 7.271-.916 9.41.216 4.222 2.232 41.346 40.589 41.826 43.214 1.137 6.227 3.042 3.995-41.574 48.714-45.404 45.51-43.426 43.688-48.017 44.232-3.242.384-3.451.56-18.19 15.328L231 214.048l1.667 1.299c17.193 13.404 45.438 13.268 64.274-.309 8.333-6.007 89.863-88.736 93.302-94.675 11.08-19.131 10.108-42.411-2.502-59.923-4.259-5.914-45.195-46.399-49.99-49.438-9.704-6.151-23.417-9.599-34.084-8.57m-181 173.614c-6.28 1.639-13.682 5.125-18.941 8.918-5.087 3.67-88.76 87.544-91.699 91.92-12.605 18.769-12.237 44.433.899 62.676 4.16 5.777 45.191 46.396 49.846 49.346a55.42 55.42 0 0062.169-1.868c8.333-6.007 89.863-88.736 93.302-94.675 10.599-18.3 10.09-40.912-1.308-58.083l-2.475-3.73-16.237 16.225c-9.916 9.909-16.101 16.577-15.89 17.13 1.445 3.775.628 4.697-42.55 47.973-22.797 22.85-42.26 41.975-43.25 42.5-2.311 1.226-7.417 1.228-9.733.004-4.121-2.179-40.639-39.901-41.513-42.882-1.803-6.145-3.328-4.338 42.267-50.068C128.771 220.094 131.081 218 135.484 218c1.975 0 3.782-1.591 18.188-16.024l15.995-16.023L168 184.63c-10.588-8.403-31.13-12.293-45.333-8.584&quot; fill-rule=&quot;evenodd&quot;/&gt;&lt;/svg&gt;</pre>
+</div>
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
+</div>
+<div created="20200912211349665" modified="20200912211425182" tags="" title="Popup">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;YYY&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
