Saved by TiddlyWiki

--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -9862,8 +9862,8 @@ display:block;
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
 </div>
-<div created="20200912211349665" modified="20200912211425182" tags="" title="Popup">
-<pre>&lt;div class=&quot;tooltip&quot;&gt;YYY&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
+<div created="20200912211349665" modified="20200912211549664" tags="" title="Popup">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;Test&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
