Saved by TiddlyWiki

--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -9654,10 +9654,10 @@ display:block;
 <div created="20200912202350950" modified="20200912202352613" title="$:/GitHub/Username">
 <pre>RikaSukenik</pre>
 </div>
-<div status="complete" title="$:/Import">
+<div created="20200912211702758" modified="20200912211705565" status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/user/images/popup-unlink]]</pre>
+# [[$:/user/images/popup-unlink]]$:/.giffmex/EditorToolbar/unlinkedpopups</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -9668,8 +9668,8 @@ display:block;
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200912211206925" modified="20200912211421277" title="$:/state/sidebar">
-<pre>no</pre>
+<div created="20200912211206925" modified="20200912211553294" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
 <div created="20200912202345548" modified="20200912202345548" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
@@ -9683,7 +9683,7 @@ display:block;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="Popup $:/Import $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
+<div created="20200912210051875" list="test Popup $:/Import $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9862,14 +9862,14 @@ display:block;
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
 </div>
-<div created="20200912211349665" modified="20200912211549664" tags="" title="Popup">
-<pre>&lt;div class=&quot;tooltip&quot;&gt;Test&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
+<div created="20200912211349665" modified="20200912211607757" tags="" title="Popup">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;Test&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;test&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
 </div>
-<div created="20200912203146184" modified="20200912203255611" tags="" title="test">
-<pre>dd dssss ert</pre>
+<div created="20200912211554489" modified="20200912211617708" tags="" title="test">
+<pre>ddd</pre>
 </div>
 <div created="20200912210109404" modified="20200912211309811" tags="" title="Test Tiddler">
 <pre>Hey just some test content here</pre>
