--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/sidebar</li>
 
 <li>$:/state/tab-1749438307</li>
@@ -180,6 +182,8 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -9668,11 +9672,14 @@ display:block;
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200912211206925" modified="20200912211553294" title="$:/state/sidebar">
+<div created="20200912215017210" modified="20200912215017210" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20200912202345548" modified="20200912202345548" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200912211206925" modified="20200912215229349" title="$:/state/sidebar">
+<pre>no</pre>
+</div>
+<div created="20200912202345548" modified="20200912215046978" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200912202348282" modified="20200912203500184" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9743,6 +9750,9 @@ display:block;
         }
     }
 }</pre>
+</div>
+<div created="20200912215052366" modified="20200912215052366" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -9868,17 +9878,10 @@ display:block;
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
 </div>
-<div created="20200912211554489" modified="20200912214703129" tags="" title="test">
-<pre>
-&lt;&lt;&lt;
-!! hjhjhh
-999kkk
-! jjjljkk
-&lt;&lt;&lt;
-ddd//jjj~~kk~~//
-&lt;&lt;&lt;
-
-&lt;&lt;&lt;
+<div author="test" created="20200912211554489" modified="20200912215237566" tags="" title="test">
+<pre>body.tc-body {
+	background: red;
+}
 </pre>
 </div>
 <div created="20200912210109404" modified="20200912211309811" tags="" title="Test Tiddler">
