Saved by TiddlyWiki

--- a/wiki/tiddler.html
+++ b/wiki/tiddler.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/NewTagName</li>
+
 <li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
@@ -199,7 +201,7 @@ Error message and password prompt
 
 <li>Prunem</li>
 
-<li>test</li>
+<li>test hi</li>
 
 <li>Test Tiddler</li>
 
@@ -9675,11 +9677,11 @@ display:block;
 <div created="20200912215017210" modified="20200912215017210" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20200912211206925" modified="20200912215229349" title="$:/state/sidebar">
-<pre>no</pre>
+<div created="20200912211206925" modified="20200912215330658" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
-<div created="20200912202345548" modified="20200912215046978" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200912202345548" modified="20200912215339612" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200912202348282" modified="20200912203500184" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9690,7 +9692,7 @@ display:block;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200912210051875" list="test Popup $:/Import $:/ControlPanel" modified="20200912210840626" title="$:/StoryList">
+<div created="20200912210051875" list="[[test hi]] Popup $:/Import $:/ControlPanel" modified="20200912215315520" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9750,6 +9752,9 @@ display:block;
         }
     }
 }</pre>
+</div>
+<div created="20200912215257328" modified="20200912215257328" title="$:/temp/NewTagName">
+<pre></pre>
 </div>
 <div created="20200912215052366" modified="20200912215052366" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9878,7 +9883,7 @@ display:block;
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
 </div>
-<div author="test" created="20200912211554489" modified="20200912215237566" tags="" title="test">
+<div author="test" created="20200912211554489" modified="20200912215351638" tags="$:/tags/Stylesheet" title="test hi">
 <pre>body.tc-body {
 	background: red;
 }
