--- a/wiki/index.html
+++ b/wiki/index.html
@@ -9864,7 +9864,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="[[About me]]" modified="20200914224715678" title="$:/StoryList">
+<div created="20200914223644731" list="test [[About me]]" modified="20200914224715678" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10996,8 +10996,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200914224523587" modified="20200914224528014" title="$:/view">
 <pre>pop</pre>
 </div>
-<div created="20200914224730097" modified="20200914225220338" tags="" title="About me">
-<pre></pre>
+<div created="20200914224730097" modified="20200914225351582" tags="" title="About me">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;[[This is a link with a preview|My notes]]&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;My notes&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
@@ -11005,8 +11005,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
 </div>
-<div created="20200912203146184" modified="20200912203255611" tags="" title="test">
-<pre>dd dssss ert</pre>
+<div created="20200914225221657" modified="20200914225259346" tags="" title="test">
+<pre>dd</pre>
 </div>
 
 
