--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/.giffmex/.Stylesheet4popups</li>
+
 <li>$:/config/NewJournal/Text</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager</li>
@@ -162,6 +164,8 @@ Error message and password prompt
 <li>$:/GitHub/Repo</li>
 
 <li>$:/GitHub/Username</li>
+
+<li>$:/Import</li>
 
 <li>$:/isEncrypted</li>
 
@@ -188,6 +192,8 @@ Error message and password prompt
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
+
+<li>$:/temp/advancedsearch</li>
 
 <li>$:/temp/info-plugin</li>
 
@@ -425,6 +431,41 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div bag="default" created="20200421214558221" modified="20200423161510720" revision="0" tags="tb $:/tags/Stylesheet" title="$:/.giffmex/.Stylesheet4popups" type="text/css">
+<pre>.tooltip {
+  position: relative;
+  display: inline-block;
+  color:#56e;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 500px;
+height:300px;
+overflow: scroll;
+  background-color: white;
+  color: #000;
+  text-align: left;
+  border-radius: 6px;
+-moz-box-shadow: 10px 10px 5px #bbb;
+-webkit-box-shadow: 10px 10px 5px #bbb;
+box-shadow: 10px 10px 5px #bbb;
+  padding: 15px;
+display:block;
+  
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 80;
+  top: 20px;
+  left: 20px;
+}
+
+.tooltip:hover &gt; .tooltiptext {
+  visibility: visible;
+}
+
+</pre>
+</div>
 <div created="20200912202333535" modified="20200912202338677" title="$:/config/NewJournal/Text">
 <pre></pre>
 </div>
@@ -9828,6 +9869,11 @@ Error message and password prompt
 <div created="20200912202350950" modified="20200912202352613" title="$:/GitHub/Username">
 <pre>RikaSukenik</pre>
 </div>
+<div status="complete" title="$:/Import">
+<pre>The following tiddlers were imported:
+
+# [[$:/.giffmex/.Stylesheet4popups]]</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -9840,7 +9886,7 @@ Error message and password prompt
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200914224531677" modified="20200914224533869" title="$:/state/sidebar">
+<div created="20200914224531677" modified="20200914225659342" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20200914223702736" modified="20200914223708677" title="$:/state/tab--1963855381">
@@ -9855,16 +9901,19 @@ Error message and password prompt
 <div created="20200912202348282" modified="20200912203500184" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200914224626995" modified="20200914224636938" title="$:/state/tab/moresidebar-1850697562">
+<div created="20200914224626995" modified="20200914225608679" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20200912203313359" modified="20200914224736244" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200912203313359" modified="20200914225556196" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="test [[About me]]" modified="20200914224715678" title="$:/StoryList">
+<div created="20200914223644731" list="$:/Import test [[About me]]" modified="20200914225541237" title="$:/StoryList">
+<pre></pre>
+</div>
+<div created="20200914225541236" modified="20200914225549691" title="$:/temp/advancedsearch">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10872,8 +10921,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20200914224555431" dependents="" description="Basic theme" modified="20200914224555431" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" plugin-priority="0" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
 </div>
-<div created="20200914224644992" modified="20200914224649235" title="$:/temp/search">
-<pre>/css</pre>
+<div created="20200914224644992" modified="20200914225548042" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200914224555408" modified="20200914224555408" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -10996,8 +11045,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200914224523587" modified="20200914224528014" title="$:/view">
 <pre>pop</pre>
 </div>
-<div created="20200914224730097" modified="20200914225351582" tags="" title="About me">
-<pre>&lt;div class=&quot;tooltip&quot;&gt;[[This is a link with a preview|My notes]]&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;My notes&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
+<div created="20200914224730097" modified="20200914225441718" tags="" title="About me">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;[[This is a link with a preview|notes]]&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;test&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
