--- a/wiki/index.html
+++ b/wiki/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/.giffmex/.Stylesheet4popups</li>
 
+<li>$:/.giffmex/EditorToolbar/linkpopups</li>
+
 <li>$:/config/NewJournal/Text</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager</li>
@@ -166,6 +168,8 @@ Error message and password prompt
 <li>$:/GitHub/Username</li>
 
 <li>$:/Import</li>
+
+<li>$:/Import!!popup-$:/.giffmex/EditorToolbar/linkpopups</li>
 
 <li>$:/isEncrypted</li>
 
@@ -196,6 +200,8 @@ Error message and password prompt
 <li>$:/temp/advancedsearch</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/NewTagName-483355304</li>
 
 <li>$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES</li>
 
@@ -407,11 +413,15 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>$:/user/images/popup-link</li>
+
 <li>$:/view</li>
 
 <li>About me</li>
 
 <li>Commonplace-book</li>
+
+<li>Draft of '$:/Import'</li>
 
 <li>Prunem</li>
 
@@ -465,6 +475,14 @@ display:block;
 }
 
 </pre>
+</div>
+<div caption="link popups" condition="[&lt;targetTiddler&gt;!has[type]] [&lt;targetTiddler&gt;type[text/vnd.tiddlywiki]]" created="20200128024856933" description="link popups" icon="$:/user/images/popup-link" modified="20200518145816031" shortcuts="" tags="$:/tags/EditorToolbar" title="$:/.giffmex/EditorToolbar/linkpopups">
+<pre>&lt;$action-sendmessage
+    $message=&quot;tm-edit-text-operation&quot;
+    $param=&quot;wrap-selection&quot;
+    prefix=&quot;&quot;&quot;&lt;div class=&quot;tooltip&quot;&gt;&lt;a href=&quot;XXX&quot;&gt;YYY&lt;/a&gt;&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;ZZZ&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;&quot;&quot;&quot;
+    suffix=&quot;&quot;&quot;&quot;&quot;&quot;
+/&gt;</pre>
 </div>
 <div created="20200912202333535" modified="20200912202338677" title="$:/config/NewJournal/Text">
 <pre></pre>
@@ -9872,7 +9890,10 @@ display:block;
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/.giffmex/.Stylesheet4popups]]</pre>
+# [[$:/.giffmex/EditorToolbar/linkpopups]]</pre>
+</div>
+<div created="20200914225835480" modified="20200914225836634" title="$:/Import!!popup-$:/.giffmex/EditorToolbar/linkpopups">
+<pre>no</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -9910,7 +9931,7 @@ display:block;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="$:/Import test [[About me]]" modified="20200914225541237" title="$:/StoryList">
+<div created="20200914223644731" list="$:/Import [[Draft of '$:/Import']] test [[About me]]" modified="20200914225541237" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200914225541236" modified="20200914225549691" title="$:/temp/advancedsearch">
@@ -9973,6 +9994,9 @@ display:block;
         }
     }
 }</pre>
+</div>
+<div created="20200914225815499" modified="20200914225816614" title="$:/temp/NewTagName-483355304">
+<pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200914224555431" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200914224555431" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
@@ -11042,6 +11066,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200914223717792" modified="20200914224045911" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
+<div created="20200514035239004" modified="20200514035640992" tags="$:/tags/Image" title="$:/user/images/popup-link">
+<pre>&lt;svg width=&quot;22pt&quot; height=&quot;22pt&quot; class=&quot;tc-popup-link-button tc-image-button&quot; viewBox=&quot;0 0 400 400&quot;&gt;&lt;path d=&quot;M297.333 3.001c-16.479 3.33-16.404 3.27-65.879 52.589-49.98 49.821-50.491 50.422-54.893 64.439-2.298 7.317-2.297 23.961.002 31.281 2.392 7.617 7.985 18.023 9.687 18.023 2.092 0 30.417-29.658 30.417-31.849 0-4.403 2.097-6.716 43.765-48.273 45.73-45.607 43.561-43.766 49.466-41.98 4.693 1.419 42.824 40.475 43.256 44.305.646 5.728 1.632 4.593-42.027 48.342-42.956 43.045-43.406 43.455-47.599 43.455-2.424 0-3.235.698-17.867 15.357l-15.328 15.357 1.655 1.263c17.552 13.392 43.933 14.067 63.174 1.617 4.439-2.872 87.17-84.958 91.977-91.26 14.879-19.505 14.791-47.465-.211-67-3.958-5.154-43.913-44.686-47.812-47.305C327.468 3.535 310.998.24 297.333 3.001m-44 115.072c-5.551 2.142-130.874 127.201-134.196 133.913-8.924 18.035 9.248 36.995 28.53 29.764 5.211-1.954 130.679-127.304 133.862-133.736 8.831-17.844-9.393-37.196-28.196-29.941m-126.557 56.674c-8.587 1.428-17.698 5.458-24.776 10.96-5.33 4.142-87.421 86.711-89.941 90.464-13.452 20.035-12.774 46.341 1.68 65.162 3.958 5.154 43.913 44.686 47.811 47.305 19.686 13.227 46.316 12.268 65.117-2.345 5.206-4.046 87.397-86.673 89.817-90.293 12.656-18.933 12.798-43.988.357-62.788-.927-1.4-2.022-2.545-2.435-2.545-2.094 0-32.406 31.672-32.406 33.86 0 4.39-2.112 6.72-43.432 47.919-45.431 45.298-43.952 44.04-49.649 42.223-2.765-.882-40.666-37.748-42.634-41.469-1.222-2.312-1.22-6.76.003-9.066.525-.991 19.65-20.453 42.5-43.25 43.277-43.178 44.199-43.996 47.974-42.551.553.212 7.258-6.019 17.238-16.017l16.333-16.363-1.654-1.263c-10.995-8.39-27.578-12.324-41.903-9.943&quot; fill-rule=&quot;evenodd&quot;/&gt;&lt;/svg&gt;</pre>
+</div>
 <div created="20200914224523587" modified="20200914224528014" title="$:/view">
 <pre>pop</pre>
 </div>
@@ -11050,6 +11077,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
+</div>
+<div created="20200914225805143" draft.of="$:/Import" draft.title="$:/Import" modified="20200914225806645" status="complete" title="Draft of '$:/Import'">
+<pre>The following tiddlers were imported:
+
+# [[$:/user/images/popup-link]]</pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
