--- a/wiki/index.html
+++ b/wiki/index.html
@@ -149,6 +149,8 @@ Error message and password prompt
 
 <li>$:/config/NewJournal/Text</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette</li>
@@ -202,8 +204,6 @@ Error message and password prompt
 <li>$:/temp/advancedsearch</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/NewTagName-483355304</li>
 
 <li>$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES</li>
 
@@ -425,8 +425,6 @@ Error message and password prompt
 
 <li>Commonplace-book</li>
 
-<li>Draft of '$:/Import'</li>
-
 <li>Prunem</li>
 
 <li>test</li>
@@ -498,6 +496,9 @@ display:block;
 </div>
 <div created="20200912202333535" modified="20200912202338677" title="$:/config/NewJournal/Text">
 <pre></pre>
+</div>
+<div created="20200914230012398" modified="20200914230012398" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import">
+<pre>show</pre>
 </div>
 <div created="20200914224510216" modified="20200914224510216" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager">
 <pre>show</pre>
@@ -9899,10 +9900,10 @@ display:block;
 <div created="20200912202350950" modified="20200912202352613" title="$:/GitHub/Username">
 <pre>RikaSukenik</pre>
 </div>
-<div status="complete" title="$:/Import">
+<div created="20200914225805143" modified="20200914225948732" status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/user/images/popup-unlink]]</pre>
+# [[$:/user/images/popup-link]]</pre>
 </div>
 <div created="20200914225835480" modified="20200914225836634" title="$:/Import!!popup-$:/.giffmex/EditorToolbar/linkpopups">
 <pre>no</pre>
@@ -9919,7 +9920,7 @@ display:block;
 <div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
 <pre>AlwaysPrune</pre>
 </div>
-<div created="20200914224531677" modified="20200914225659342" title="$:/state/sidebar">
+<div created="20200914224531677" modified="20200914230038614" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20200914223702736" modified="20200914223708677" title="$:/state/tab--1963855381">
@@ -9937,13 +9938,13 @@ display:block;
 <div created="20200914224626995" modified="20200914225608679" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20200912203313359" modified="20200914225556196" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200912203313359" modified="20200914230051894" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="$:/Import [[Draft of '$:/Import']] test [[About me]]" modified="20200914225541237" title="$:/StoryList">
+<div created="20200914223644731" list="[[About me]]" modified="20200914230053584" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200914225541236" modified="20200914225549691" title="$:/temp/advancedsearch">
@@ -10006,9 +10007,6 @@ display:block;
         }
     }
 }</pre>
-</div>
-<div created="20200914225815499" modified="20200914225816614" title="$:/temp/NewTagName-483355304">
-<pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200914224555431" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200914224555431" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
@@ -11087,16 +11085,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200914224523587" modified="20200914224528014" title="$:/view">
 <pre>pop</pre>
 </div>
-<div created="20200914224730097" modified="20200914225441718" tags="" title="About me">
-<pre>&lt;div class=&quot;tooltip&quot;&gt;[[This is a link with a preview|notes]]&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;test&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
+<div created="20200914224730097" modified="20200914230207129" tags="" title="About me">
+<pre>&lt;div class=&quot;tooltip&quot;&gt;YYY&lt;div class=&quot;tooltiptext&quot;&gt;&lt;$transclude tiddler=&quot;test&quot; mode=&quot;block&quot;/&gt;&lt;/div&gt;&lt;/div&gt;</pre>
 </div>
 <div created="20200912204026720" modified="20200912204034777" title="Commonplace-book">
 <pre></pre>
-</div>
-<div created="20200914225805143" draft.of="$:/Import" draft.title="$:/Import" modified="20200914225806645" status="complete" title="Draft of '$:/Import'">
-<pre>The following tiddlers were imported:
-
-# [[$:/user/images/popup-link]]</pre>
 </div>
 <div created="20200912203302608" modified="20200912203634525" tags="" title="Prunem">
 <pre>jojjlkjk;lk;lj</pre>
