--- a/wiki/index.html
+++ b/wiki/index.html
@@ -60,7 +60,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 
 <!--~~ Static styles ~~-->
 <div id="styleArea">
-<style data-tiddler-title="$:/boot/boot.css" data-tiddler-type="text/css" type="text/css">/*
+<style data-tiddler-created="20200914230316029" data-tiddler-modified="20200914230321729" data-tiddler-title="$:/boot/boot.css" data-tiddler-type="text/css" type="text/css">/*
 Basic styles used before we boot up the parsing engine
 */
 
@@ -69,7 +69,7 @@ Error message and password prompt
 */
 
 .tc-error-form {
-	font-family: sans-serif;
+	font-family: arial;
 	color: #fff;
 	z-index: 20000;
 	position: fixed;
@@ -9938,13 +9938,13 @@ display:block;
 <div created="20200914224626995" modified="20200914225608679" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20200912203313359" modified="20200914230051894" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200912203313359" modified="20200914230245874" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="[[About me]]" modified="20200914230053584" title="$:/StoryList">
+<div created="20200914223644731" list="$:/boot/boot.css test [[About me]]" modified="20200914230248376" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200914225541236" modified="20200914225549691" title="$:/temp/advancedsearch">
@@ -10955,8 +10955,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20200914224555431" dependents="" description="Basic theme" modified="20200914224555431" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" plugin-priority="0" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
 </div>
-<div created="20200914224644992" modified="20200914225909091" title="$:/temp/search">
-<pre>gif</pre>
+<div created="20200914224644992" modified="20200914230228875" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200914224555408" modified="20200914224555408" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
