Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>technologist</li>
+
 </ul>
 </p>
 
@@ -9578,7 +9580,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200915225312834" list="GettingStarted $:/ControlPanel" modified="20200915225312834" title="$:/StoryList">
+<div created="20200915225312834" list="technologist GettingStarted $:/ControlPanel" modified="20200915225312834" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9747,6 +9749,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200915225503733" modified="20200915225509812" tags="" title="technologist">
+<pre></pre>
 </div>
 
 
