--- a/wiki/index.html
+++ b/wiki/index.html
@@ -167,8 +167,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>technologist</li>
-
 </ul>
 </p>
 
@@ -9556,31 +9554,31 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200915225424184" modified="20200915225428800" title="$:/GitHub/Filename">
+<div created="20200915234054969" modified="20200915234056037" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200915225448233" modified="20200915225448722" title="$:/GitHub/Path">
+<div created="20200915234053100" modified="20200915234054053" title="$:/GitHub/Path">
 <pre>/wiki</pre>
 </div>
-<div created="20200915225338897" modified="20200915225417691" title="$:/GitHub/Repo">
+<div created="20200915234046157" modified="20200915234050566" title="$:/GitHub/Repo">
 <pre>RikaSukenik/Commonplace-book</pre>
 </div>
-<div created="20200915225320933" modified="20200915225322417" title="$:/GitHub/Username">
+<div created="20200915234022337" modified="20200915234024993" title="$:/GitHub/Username">
 <pre>RikaSukenik</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200915225314921" modified="20200915225316740" title="$:/state/tab-1749438307">
+<div created="20200915234001903" modified="20200915234001903" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200915225318324" modified="20200915225318324" title="$:/state/tab-2065006209">
+<div created="20200915234005534" modified="20200915234005534" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200915225312834" list="technologist GettingStarted $:/ControlPanel" modified="20200915225312834" title="$:/StoryList">
+<div created="20200915233955803" list="GettingStarted $:/ControlPanel" modified="20200915233955803" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9749,9 +9747,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200915225503733" modified="20200915225509812" tags="" title="technologist">
-<pre></pre>
 </div>
 
 
