Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>es</li>
+
 </ul>
 </p>
 
@@ -9554,31 +9556,31 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200915234054969" modified="20200915234056037" title="$:/GitHub/Filename">
+<div created="20200915234224212" modified="20200915234226779" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200915234053100" modified="20200915234054053" title="$:/GitHub/Path">
+<div created="20200915234222829" modified="20200915234223366" title="$:/GitHub/Path">
 <pre>/wiki</pre>
 </div>
-<div created="20200915234046157" modified="20200915234050566" title="$:/GitHub/Repo">
-<pre>RikaSukenik/Commonplace-book</pre>
+<div created="20200915234213333" modified="20200915234219651" title="$:/GitHub/Repo">
+<pre>RikaSukenik/commonplace-book</pre>
 </div>
-<div created="20200915234022337" modified="20200915234024993" title="$:/GitHub/Username">
-<pre>RikaSukenik</pre>
+<div created="20200915234154622" modified="20200915234200213" title="$:/GitHub/Username">
+<pre>Rika</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200915234001903" modified="20200915234001903" title="$:/state/tab-1749438307">
+<div created="20200915234145768" modified="20200915234145768" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200915234005534" modified="20200915234005534" title="$:/state/tab-2065006209">
+<div created="20200915234149285" modified="20200915234149285" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200915233955803" list="GettingStarted $:/ControlPanel" modified="20200915233955803" title="$:/StoryList">
+<div created="20200915234144389" list="es GettingStarted $:/ControlPanel TiddlyWiki" modified="20200915234203571" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9747,6 +9749,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200915234233467" modified="20200915234235912" tags="" title="es">
+<pre></pre>
 </div>
 
 
