--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
+<link rel="stylesheet" type="text/css" href="static.css" media="screen"/>
