--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<link rel="stylesheet" type="text/css" href="static.css" media="screen"/>
-<A HREF="wike2.html">About this site</A>
+<!DOCTYPE html>
+<head>
+<title>AlwaysPrune</title>
+<link href="static.css" rel="stylesheet">
+</head>
