--- a/index.html
+++ b/index.html
@@ -9626,8 +9626,8 @@ Error message and password prompt
 &lt;/html&gt;
 `</pre>
 </div>
-<div created="20201020231841913" modified="20201021045716862" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>[[musings on ideas]</pre>
+<div created="20201020231841913" modified="20201021050003397" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>[[musings on ideas]]</pre>
 </div>
 <div title="$:/isEncrypted" revision="0" bag="default">
 <pre>no</pre>
@@ -9821,7 +9821,7 @@ very-muted-foreground: #888888</pre>
 <div title="$:/status/RequireReloadDueToPluginChange" revision="0" bag="default">
 <pre>no</pre>
 </div>
-<div list="[[Filter error: Missing [ in filter expression]]" title="$:/StoryList" revision="1" bag="default">
+<div list="[[musings on ideas]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div created="20201005172041502" modified="20201005172041527" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
