Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -1692,8 +1692,8 @@ Error message and password prompt
 <div bag="default" created="20170615081040584" modified="20201202080625796" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div bag="default" created="20201022165903898" modified="20210306000717797" revision="0" title="$:/config/AutoSave" type="text/vnd.tiddlywiki">
-<pre>no</pre>
+<div bag="default" created="20201022165903898" modified="20210306054621923" revision="0" title="$:/config/AutoSave" type="text/vnd.tiddlywiki">
+<pre>yes</pre>
 </div>
 <div bag="default" created="20201231183449686" modified="20210212140649737" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/config/DefaultColourMappings/menubar-background" type="text/vnd.tiddlywiki">
 <pre>transparent</pre>
@@ -1701,8 +1701,8 @@ Error message and password prompt
 <div bag="default" created="20201231183527738" modified="20210213130623428" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/config/DefaultColourMappings/menubar-foreground" type="text/vnd.tiddlywiki">
 <pre>&lt;&lt;colour sidebar-controls-foreground&gt;&gt;</pre>
 </div>
-<div created="20210305235652422" modified="20210306000743877" title="$:/config/DownloadSaver/AutoSave">
-<pre>no</pre>
+<div created="20210305235652422" modified="20210306054625536" title="$:/config/DownloadSaver/AutoSave">
+<pre>yes</pre>
 </div>
 <div bag="default" created="20201023191517592" modified="20201023191517602" revision="0" title="$:/config/jd/mobbutton/visibility/$:/plugins/jd/mob/button/config" type="text/vnd.tiddlywiki">
 <pre>hide</pre>
@@ -16863,8 +16863,8 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210212142638676" modified="20210305235606113" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20210305235608208" modified="20210306000757333" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20210305235608208" modified="20210306054633087" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitLab</pre>
 </div>
 <div created="20210213150454706" modified="20210213150457406" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
