Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -597,6 +597,8 @@ Error message and password prompt
 
 <li>$:/state/sq/streams/current-edit-tiddler-2056160226</li>
 
+<li>$:/state/sq/streams/current-edit-tiddler-69603586</li>
+
 <li>$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043024922--1352630874</li>
 
 <li>$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043641979--2032969581</li>
@@ -1182,6 +1184,8 @@ Error message and password prompt
 <li>March 4th, 2021 (Thursday)/20210306005312126</li>
 
 <li>March 5th, 2021 (Friday)</li>
+
+<li>March 5th, 2021 (Friday)/20210306054653862</li>
 
 <li>Martin Luther King Jr</li>
 
@@ -12254,8 +12258,8 @@ fill:$(foregroundColor)$;
 <div created="20210213124805015" modified="20210213124805479" title="$:/language/DefaultNewTiddlerTitle">
 <pre>New Page</pre>
 </div>
-<div created="20201201192441925" modified="20210306054411744" title="$:/palette">
-<pre>$:/palettes/rr/DayMode</pre>
+<div created="20201201192441925" modified="20210306054648920" title="$:/palette">
+<pre>$:/palettes/rr/NightMode</pre>
 </div>
 <div bag="default" created="20201118085328588" description="Bright and Clear" modified="20210214130107686" name="RR-TW5 Day Mode" revision="0" tags="$:/tags/Palette rr-UI rr-TW5" title="$:/palettes/rr/DayMode" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -16839,6 +16843,9 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210304231458216" modified="20210304231458216" title="$:/state/sq/streams/current-edit-tiddler-2056160226">
 <pre>March 4th, 2021 (Thursday)/20210304231110881/20210304231458212</pre>
 </div>
+<div created="20210306054701711" modified="20210306054701711" title="$:/state/sq/streams/current-edit-tiddler-69603586">
+<pre>March 5th, 2021 (Friday)/20210306054653862</pre>
+</div>
 <div created="20210304044429043" modified="20210304044429749" title="$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043024922--1352630874">
 <pre>show</pre>
 </div>
@@ -16860,11 +16867,11 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213124458464" modified="20210213130054074" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20210212142638676" modified="20210305235606113" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210212142638676" modified="20210306054642881" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20210305235608208" modified="20210306054633087" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitLab</pre>
+<div created="20210305235608208" modified="20210306054640778" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20210213150454706" modified="20210213150457406" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
@@ -17963,7 +17970,10 @@ See what happens to this block</pre>
 <div created="20210306005312129" modified="20210306005312129" parent="March 4th, 2021 (Thursday)/20210306004919763" stream-type="default" title="March 4th, 2021 (Thursday)/20210306005312126">
 <pre></pre>
 </div>
-<div created="20210306002818617" modified="20210306002818617" sort-date="20210305" tags="DailyNote" title="March 5th, 2021 (Friday)">
+<div created="20210306002818617" modified="20210306054701710" sort-date="20210305" stream-list="[[March 5th, 2021 (Friday)/20210306054653862]]" stream-type="default" tags="DailyNote" title="March 5th, 2021 (Friday)">
+<pre></pre>
+</div>
+<div created="20210306054653866" modified="20210306054702548" parent="March 5th, 2021 (Friday)" stream-type="default" title="March 5th, 2021 (Friday)/20210306054653862">
 <pre></pre>
 </div>
 <div created="20201026122348804" modified="20201026122348804" title="Martin Luther King Jr">
